# github_discovery_repporting

./: .env.example  .gitignore  CLAUDE.md  README.md  alembic.ini  docker-compose.yml  flake.nix  justfile  pyproject.toml
alembic/: env.py
alembic/versions/: 001_expand_categories.py  002_add_scan_profiles.py  003_add_export_paths.py
backend/: config.py  database.py  main.py
backend/analysis/: analyzer.py  client.py  platform_context.py  prompts.py  schemas.py
backend/benchmarks/: cis.py  dora.py  openssf.py  slsa.py
backend/models/: __init__.py  base.py  customer.py  enums.py  finding.py  report.py  requirement.py  scan.py  scan_profile.py
backend/providers/: azure_devops.py  base.py  factory.py  github.py  gitlab.py  models.py
backend/reports/: excel.py  generator.py  markdown.py  pdf.py  zip_bundler.py
backend/routers/: connections.py  customers.py  dashboard.py  reports.py  scan_profiles.py  scans.py
backend/scanners/: base.py  cicd.py  code_quality.py  collaboration.py  compliance.py  container_security.py  dast.py  dependencies.py  disaster_recovery.py  governance.py  identity_access.py  migration.py  monitoring.py  orchestrator.py  platform_arch.py  registry.py  repo_governance.py  sast.py  sdlc_process.py  secrets_mgmt.py  security.py
backend/schemas/: customer.py  finding.py  platform_data.py  report.py  scan.py  scan_profile.py
docs/: api-reference.md  architecture.md  database-schema.md  report-generation.md  scan-workflow.md  scanner-engine.md
frontend/: index.html  package-lock.json  package.json
tests/: conftest.py  test_report_exports.py  test_scan_profiles.py  test_secrets.py
(+31 files in other folders)
